--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "build:w": "tsc -w",
+    "serve": "node ./build/server.js",
+    "dev": "npm run develop",
+    "develop": "npm run build && npm run serve",
+    "test": "npm run build && mocha --file \"./build/test.js\" \"./build/**/*.spec.js\"",
+    "test:w": "npm run build && mocha --file \"./build/test.js\" -w \"./build/**/*.spec.js\"",
+    "lint": "eslint --ext ts src",
+    "lint:fix": "eslint --ext ts --fix src"
+  },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
@@ -14,6 +26,13 @@
     "@types/express": "^4.17.7",
     "@types/formidable": "^1.0.31",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.0.24"
+    "@types/mocha": "^8.0.0",
+    "@types/node": "^14.0.24",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "mocha": "^8.0.1",
+    "supertest": "^4.0.2"
   }
 }
