--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "hexoid": "^1.0.0",
+    "htmlparser2": "^4.1.0",
+    "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "sqlite3": "^5.0.0",
