--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "tsc",
     "build:w": "tsc -w",
-    "serve": "node ./build/server.js",
+    "serve": "node ./build/main.js",
     "dev": "npm run develop",
     "develop": "npm run build && npm run serve",
     "test": "npm run build && mocha --file \"./build/test.js\" \"./build/**/*.spec.js\"",
