--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "follow-redirects": "^1.12.1",
     "formidable": "^1.2.2",
     "hexoid": "^1.0.0",
     "htmlparser2": "^4.1.0",
     "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.0.0",
     "unfurl.js": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/follow-redirects": "^1.8.0",
     "@types/formidable": "^1.0.31",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.0",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.24",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
