--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
     "lint:fix": "eslint --ext ts --fix src"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.1.2",
     "@types/bcrypt": "^3.0.0",
+    "@types/multer": "^1.4.3",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "follow-redirects": "^1.12.1",
-    "formidable": "^1.2.2",
     "hexoid": "^1.0.0",
     "htmlparser2": "^4.1.0",
     "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
     "unfurl.js": "^5.1.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/follow-redirects": "^1.8.0",
     "@types/formidable": "^1.0.31",
