--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.1.2",
+    "@google-cloud/translate": "^6.0.2",
     "@types/bcrypt": "^3.0.0",
     "@types/multer": "^1.4.3",
     "axios": "^0.19.2",
@@ -26,6 +27,7 @@
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "promise-completer": "^1.0.0",
     "sqlite3": "^5.0.0",
     "unfurl.js": "^5.1.0"
   },
