--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@google-cloud/firestore": "^4.1.1",
     "@google-cloud/storage": "^5.1.2",
     "@google-cloud/translate": "^6.0.2",
-    "@types/bcrypt": "^3.0.0",
-    "@types/multer": "^1.4.3",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
@@ -25,14 +23,12 @@
     "htmlparser2": "^4.1.0",
     "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "promise-completer": "^1.0.0",
-    "sqlite3": "^5.0.0",
-    "unfurl.js": "^5.1.0"
+    "promise-completer": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/follow-redirects": "^1.8.0",
@@ -40,12 +36,15 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.0",
     "@types/morgan": "^1.9.1",
+    "@types/multer": "^1.4.3",
     "@types/node": "^14.0.24",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
     "mocha": "^8.0.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
