--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,10 @@ on:
   push:
     branches:
     - master
+    paths-ignore:
+    - .gitingore
+    - README.md
+    - LICENSE
 
 env:
   PROJECT_ID: ${{ secrets.GCE_PROJECT }}
@@ -72,7 +76,7 @@ jobs:
         gcloud compute instances update-container "$GCE_INSTANCE" \
           --zone "$GCE_INSTANCE_ZONE" \
           --container-image "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA" \
-          --container-env-file=JWT_TOKEN_SECRET
+          --container-env-file=container_env
 
         rm container_env
 
